@@ -5,6 +5,9 @@ ubuntu-release-upgrader (1:15.04.0) UNRELEASED; urgency=low
     data/DistUpgrade.cfg,
     pre-build.sh:    
     - updated for 14.10->15.04
+  * DistUpgrade/DistUpgradeController.py:
+    - do not abort when debsig-verify is installed anymore, the
+      package does not cause trouble anymore
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 10 Nov 2014 14:06:53 +0100
 
